Creating 12 columns to the months and 52 to the weeks

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,11 +6,8 @@
     transform: translateX(-50%);
     margin: 30px auto;
 }
-#containerMonth {
-    width: 270px;
-}
-#containerWeek {
-    width: 1150px;
+#containerMonth, #containerWeek {
+    min-width: 1200px;
 }
 
 .month, .week {
